--- a/index.html
+++ b/index.html
@@ -66,14 +66,26 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+           				<li class="future"><a href="https://plus.google.com/events/cu16bpj1pgtp3dn3tb0i0mh7mhk">31/7-8/8/2018 | OS kamp 2018</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/chgannir33nrdqd6bditikvp9u8">29/3/2018 | 2de Gekochte repititie Fanfare</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/chbpnehvqc3stvtest75hg0kn70">22/3/2018 | 1ste Gekochte repititie Fanfare</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/ca3eav1642dvjgmng2a3vdtbg70">10-11/3/2018 | L(uxe) O(ud) S(couts) weekend</a></li>
            				<li class="future"><a href="https://plus.google.com/events/c92lhnnebn0g5i2sal4jcg9ecro">26-28/1/2018 | Winteroffensief 2018</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cce5pkt5gna3cehrq6i8f3qsmds">30/11/2017 | Algemene ledenvergadering</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cn7gogm6v0ftb6oo5fol6rnb788">25-26/11/2017 | Parsival Mosselfeest</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cb0a3uvop63uegp5o27b8vf6or0">12/11/2017 | Fietstocht - 10de editie</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/c7du91me3ggt2bkspt374525qes">13-15/10/2017 | Parsival KNALT!</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c4hv9ln1o571bkd49m2cu1pr1e8">14/1/2018 | Nieuwjaarsreceptie 2018</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c2vrddqc5t0daph8pj1bntfs5k8">28/12/2017 | VT-dropping met winter BBQ</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/cce5pkt5gna3cehrq6i8f3qsmds">30/11/2017 | Algemene ledenvergadering</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/cn7gogm6v0ftb6oo5fol6rnb788">25-26/11/2017 | Parsival Mosselfeest</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/cb0a3uvop63uegp5o27b8vf6or0">12/11/2017 | Fietstocht - 10de editie</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c7du91me3ggt2bkspt374525qes">13-15/10/2017 | Parsival KNALT!</a></li>
            				<li class="past"><a href="https://plus.google.com/events/c3gu2ll37t5e9saa5tlglllnef4">8-10/9/2017 | Charettenweekend 2017</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cc29j6ulv15dulaigubgcvhgf90">4-10/8/2017 | OS kamp 2017</a></li>
-           				<!-- <li class="future"><a href="https://plus.google.com/events/cqesog72vs27j173spjsku8tppo">23/6/2017 | Parsivaliaans Openlucht Popup Zomerterras</a></li> -->
+					</ul>
+
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
+
+ 					<h3>Archief</h3>
+					<ul>
+						<!-- <li class="future"><a href="https://plus.google.com/events/cqesog72vs27j173spjsku8tppo">23/6/2017 | Parsivaliaans Openlucht Popup Zomerterras</a></li> -->
            				<li class="past"><a href="https://plus.google.com/events/cejbotf1taf76svc8phgchcp4pc">16-17/6/2017 | Zomeroffensief 2017 (Lite edition)</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ctp6hb9f52cfsrtsuh43s8rv9ig">27-28/5/2017 | Molenbergfeesten</a></li>
            				<!--<li class="future"><a href="https://plus.google.com/events/c8k2bu8l5bugau6mnp76t883o2s">10/6/2017 | DCM Slagerfestival ism Parsival</a></li>-->
@@ -90,12 +102,6 @@ href="https://plus.google.com/events/c5kli97hn6ahik3l43bpv7btaf8">7-9/10/2016 | 
            				<li class="past"><a
 href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | Charettenweekend</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ce4hfvtjji5pmqadosks5nbs1n8">5-11/8/2016 | OS kamp 2016</a></li>
-					</ul>
-
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
-
- 					<h3>Archief</h3>
-					<ul>
 						<li class="past"><a href="https://plus.google.com/events/cnr4jlifetbqg6kd1ci6s83jr8k?authkey=CNjqy4HsjMSjZQ">13/6/2016 | Live Stream - EK2016 België Italië</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cin2n2lccnohtfajee1i2ih1jms">4/6/2016 | Vosog - Proviciale wandelrally</a></li>
            				<li class="past"><a href="https://plus.google.com/events/chf0e1ki7feaacfkeo1k2b9dls4">27-29/5/2016 | Zomeroffensief 2016</a></li>
