--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+           				<li class="future"><a href="https://plus.google.com/events/c8bd24jqbmbntgsaj19pggfnic8">7-9/9/2018 | Charettenweekend 2018</a></li>
            				<li class="future"><a href="https://plus.google.com/events/cu16bpj1pgtp3dn3tb0i0mh7mhk">31/7-8/8/2018 | OS kamp 2018</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/clsc04tbl926crl0ppfipqqesfk">22/6/2018 | Parsivaliaans Openlucht Popup Zomerterras</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c9c3coetpoabm75mpt64kuagbo8">8-9/6/2018 | Zomeroffensief 2018 (Lite edition)</a></li>
            				<li class="future"><a href="https://plus.google.com/events/chgannir33nrdqd6bditikvp9u8">29/3/2018 | 2de Gekochte repititie Fanfare</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/chbpnehvqc3stvtest75hg0kn70">22/3/2018 | 1ste Gekochte repititie Fanfare</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/ca3eav1642dvjgmng2a3vdtbg70">10-11/3/2018 | L(uxe) O(ud) S(couts) weekend</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/c92lhnnebn0g5i2sal4jcg9ecro">26-28/1/2018 | Winteroffensief 2018</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/c4hv9ln1o571bkd49m2cu1pr1e8">14/1/2018 | Nieuwjaarsreceptie 2018</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/c2vrddqc5t0daph8pj1bntfs5k8">28/12/2017 | VT-dropping met winter BBQ</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/chbpnehvqc3stvtest75hg0kn70">22/3/2018 | 1ste Gekochte repititie Fanfare</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/ca3eav1642dvjgmng2a3vdtbg70">10-11/3/2018 | L(uxe) O(ud) S(couts) weekend</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c92lhnnebn0g5i2sal4jcg9ecro">26-28/1/2018 | Winteroffensief 2018</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c4hv9ln1o571bkd49m2cu1pr1e8">14/1/2018 | Nieuwjaarsreceptie 2018</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c2vrddqc5t0daph8pj1bntfs5k8">28/12/2017 | VT-dropping met winter BBQ</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cce5pkt5gna3cehrq6i8f3qsmds">30/11/2017 | Algemene ledenvergadering</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cn7gogm6v0ftb6oo5fol6rnb788">25-26/11/2017 | Parsival Mosselfeest</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cb0a3uvop63uegp5o27b8vf6or0">12/11/2017 | Fietstocht - 10de editie</a></li>
