--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
            				<li class="future"><a href="https://plus.google.com/events/cu16bpj1pgtp3dn3tb0i0mh7mhk">31/7-8/8/2018 | OS kamp 2018</a></li>
            				<li class="future"><a href="https://plus.google.com/events/clsc04tbl926crl0ppfipqqesfk">22/6/2018 | Parsivaliaans Openlucht Popup Zomerterras</a></li>
            				<li class="future"><a href="https://plus.google.com/events/c9c3coetpoabm75mpt64kuagbo8">8-9/6/2018 | Zomeroffensief 2018 (Lite edition)</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/chgannir33nrdqd6bditikvp9u8">29/3/2018 | 2de Gekochte repititie Fanfare</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cf00nb9f8u5edk5unt23int5ifk">29/4/2018 | (Graalridders - Parsival - Oud Scouts) Wandeling met Hermelijn</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/chgannir33nrdqd6bditikvp9u8">29/3/2018 | 2de Gekochte repititie Fanfare</a></li>
            				<li class="past"><a href="https://plus.google.com/events/chbpnehvqc3stvtest75hg0kn70">22/3/2018 | 1ste Gekochte repititie Fanfare</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ca3eav1642dvjgmng2a3vdtbg70">10-11/3/2018 | L(uxe) O(ud) S(couts) weekend</a></li>
            				<li class="past"><a href="https://plus.google.com/events/c92lhnnebn0g5i2sal4jcg9ecro">26-28/1/2018 | Winteroffensief 2018</a></li>
