--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- Import Google Webfont 'Roboto' -->
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,900' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900' rel='stylesheet' type='text/css'>
 
         <!-- MailChimp default form styles -->
         <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
@@ -345,7 +345,7 @@ href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | 
 			<footer>
 				<p>&copy 1999-2015 Oudscouts Parsival - Alle rechten voorbehouden - <a href="https://plus.google.com/103890813912672931897" rel="publisher">Google+</a><br />
 				Deze site valt onder een <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.nl">Creative Commons licentie</a>.</p>
-				<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.nl"><img alt="Creative Commons-Licentie" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" style="padding-left:0.625em" /></a></p>
+				<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.nl"><img alt="Creative Commons-Licentie" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" style="padding-left:0.625em" /></a></p>
 			<footer>
 
 		</div>
