--- a/index.html
+++ b/index.html
@@ -66,11 +66,23 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
-           				<li class="future"><a href="https://plus.google.com/events/c8bd24jqbmbntgsaj19pggfnic8">7-9/9/2018 | Charettenweekend 2018</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cu16bpj1pgtp3dn3tb0i0mh7mhk">31/7-8/8/2018 | OS kamp 2018</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/clsc04tbl926crl0ppfipqqesfk">22/6/2018 | Parsivaliaans Openlucht Popup Zomerterras</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/c9c3coetpoabm75mpt64kuagbo8">8-9/6/2018 | Zomeroffensief 2018 (Lite edition)</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cf00nb9f8u5edk5unt23int5ifk">29/4/2018 | (Graalridders - Parsival - Oud Scouts) Wandeling met Hermelijn</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c1fi4ur3p5g6lt2u74uetfr74b0">16-17/03/2019 | L(uxe) O(ud) S(couts) weekend</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cuj9c570k62j16q7mqh2c83vpvc">25-27/01/2019 | Winteroffensief 2019</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cuklkb1bs36rhbosrfg84jc7g04">13/01/2019 | Nieuwjaarsreceptie</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cn2k34okp99gnd1p9kuasarpdqo">24-25/11/2018 | Parsival Mosselfeest</a></li>
+						<li class="future"><a href="https://plus.google.com/events/c2h9vmnol5tvv24c8pdqbpfsqd8">11/11/2018 | Fietstocht - 11de editie</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cs2764m02jui08lllmud1s44i7k">12-14/10/2018 | Parsival Knalt!</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c8bd24jqbmbntgsaj19pggfnic8">7-9/9/2018 | Charettenweekend 2018</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/cu16bpj1pgtp3dn3tb0i0mh7mhk">31/7-8/8/2018 | OS kamp 2018</a></li>
+					</ul>
+
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
+
+ 					<h3>Archief</h3>
+					<ul>
+						<li class="past"><a href="https://plus.google.com/events/clsc04tbl926crl0ppfipqqesfk">22/6/2018 | Parsivaliaans Openlucht Popup Zomerterras</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c9c3coetpoabm75mpt64kuagbo8">8-9/6/2018 | Zomeroffensief 2018 (Lite edition)</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/cf00nb9f8u5edk5unt23int5ifk">29/4/2018 | (Graalridders - Parsival - Oud Scouts) Wandeling met Hermelijn</a></li>
            				<li class="past"><a href="https://plus.google.com/events/chgannir33nrdqd6bditikvp9u8">29/3/2018 | 2de Gekochte repititie Fanfare</a></li>
            				<li class="past"><a href="https://plus.google.com/events/chbpnehvqc3stvtest75hg0kn70">22/3/2018 | 1ste Gekochte repititie Fanfare</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ca3eav1642dvjgmng2a3vdtbg70">10-11/3/2018 | L(uxe) O(ud) S(couts) weekend</a></li>
@@ -83,12 +95,6 @@
            				<li class="past"><a href="https://plus.google.com/events/c7du91me3ggt2bkspt374525qes">13-15/10/2017 | Parsival KNALT!</a></li>
            				<li class="past"><a href="https://plus.google.com/events/c3gu2ll37t5e9saa5tlglllnef4">8-10/9/2017 | Charettenweekend 2017</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cc29j6ulv15dulaigubgcvhgf90">4-10/8/2017 | OS kamp 2017</a></li>
-					</ul>
-
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
-
- 					<h3>Archief</h3>
-					<ul>
 						<!-- <li class="future"><a href="https://plus.google.com/events/cqesog72vs27j173spjsku8tppo">23/6/2017 | Parsivaliaans Openlucht Popup Zomerterras</a></li> -->
            				<li class="past"><a href="https://plus.google.com/events/cejbotf1taf76svc8phgchcp4pc">16-17/6/2017 | Zomeroffensief 2017 (Lite edition)</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ctp6hb9f52cfsrtsuh43s8rv9ig">27-28/5/2017 | Molenbergfeesten</a></li>
