--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@ href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | 
 
 							<select name="LASTYEAR" class="lastyear" id="mce-LASTYEAR">
 								<option value="--">Laatste scoutsjaar (jaarthema, kampplaats, kampthema)</option>
-								<option value="2017-2018">2016-2017 - Allemaal abnormaal - Vesqueville - ...</option>
+								<option value="2018-2019">2018-2019 - Minder is meer - Paliseul - ...</option>
+								<option value="2017-2018">2017-2018 - Allemaal abnormaal - Vesqueville - De Ruimte</option>
 								<option value="2016-2017">2016-2017 - Grenzeloos Groeien - Felenne - Teletijdmachine</option>
 								<option value="2015-2016">2015-2016 - Be Prepared - Felenne - Circus Parsival</option>
 								<option value="2014-2015">2014-2015 - Tent vol talent - Lessive - Ziekenhuis</option>
