--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
-           				<li class="future"><a href="https://plus.google.com/events/c1fi4ur3p5g6lt2u74uetfr74b0">16-17/03/2019 | L(uxe) O(ud) S(couts) weekend</a></li>
-						<li class="future"><a href="https://plus.google.com/events/cuj9c570k62j16q7mqh2c83vpvc">25-27/01/2019 | Winteroffensief 2019</a></li>
-						<li class="future"><a href="https://plus.google.com/events/cuklkb1bs36rhbosrfg84jc7g04">13/01/2019 | Nieuwjaarsreceptie</a></li>
-						<li class="future"><a href="https://plus.google.com/events/cn2k34okp99gnd1p9kuasarpdqo">24-25/11/2018 | Parsival Mosselfeest</a></li>
-						<li class="future"><a href="https://plus.google.com/events/c2h9vmnol5tvv24c8pdqbpfsqd8">11/11/2018 | Fietstocht - 11de editie</a></li>
-						<li class="future"><a href="https://plus.google.com/events/cs2764m02jui08lllmud1s44i7k">12-14/10/2018 | Parsival Knalt!</a></li>
+           				<li class="future"><a href="https://www.facebook.com/events/350748252446048/">30/7-8/8/2019 | OS kamp 2019</a></li> 
+						<li class="future"><a href="https://www.facebook.com/events/1811280442305144/">5-10/6/2019 | Zomeroffensief - 75jaar D-day</a></li> 
+						<li class="future"><a href="https://plus.google.com/events/c1fi4ur3p5g6lt2u74uetfr74b0">16-17/03/2019 | L(uxe) O(ud) S(couts) weekend</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cuj9c570k62j16q7mqh2c83vpvc">25-27/01/2019 | Winteroffensief 2019</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cuklkb1bs36rhbosrfg84jc7g04">13/01/2019 | Nieuwjaarsreceptie</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cn2k34okp99gnd1p9kuasarpdqo">24-25/11/2018 | Parsival Mosselfeest</a></li>
+						<li class="past"><a href="https://plus.google.com/events/c2h9vmnol5tvv24c8pdqbpfsqd8">11/11/2018 | Fietstocht - 11de editie</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cs2764m02jui08lllmud1s44i7k">12-14/10/2018 | Parsival Knalt!</a></li>
            				<li class="past"><a href="https://plus.google.com/events/c8bd24jqbmbntgsaj19pggfnic8">7-9/9/2018 | Charettenweekend 2018</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cu16bpj1pgtp3dn3tb0i0mh7mhk">31/7-8/8/2018 | OS kamp 2018</a></li>
 					</ul>
