update button overzicht

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
            				<li class="past"><a href="https://plus.google.com/events/cu16bpj1pgtp3dn3tb0i0mh7mhk">31/7-8/8/2018 | OS kamp 2018</a></li>
 					</ul>
 
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
+					<p><a href="https://www.facebook.com/groups/428188391251729/events/" class="bigbutton">Bekijk het nieuwe activiteiten overzicht op Facebook</a></p>
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events">Bekijk het oude activiteiten overzicht op Google+</a></p>
 
  					<h3>Archief</h3>
 					<ul>
