replace g+ widget with fb variant

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
         <!-- Add your site or application content here -->
 
-		<div id="gplusembed">
-			<!-- google plus widget -->
-			<div class="g-page" data-width="300" data-href="//plus.google.com/103890813912672931897" data-theme="dark" data-rel="publisher"></div>
+		<div id="fbembed">
+			<!-- facebook group widget -->
+			<table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse:collapse;"><tbody><tr><td style=""><table border="0" cellspacing="0" cellpadding="0" style="border-collapse:separate;background-color:#ffffff;border:1px solid #dddfe2;border-radius:3px;font-family:Helvetica, Arial, sans-serif;margin:0px auto; max-width:640px;"><tbody><tr style="padding-bottom: 8px;"><td style=""><img class="img" src="https://scontent-frx5-1.xx.fbcdn.net/v/t1.0-0/c0.0.568.296a/p320x320/51945489_2160385257389077_4848220171044651008_n.jpg?_nc_cat=103&amp;_nc_ht=scontent-frx5-1.xx&amp;oh=3feff3aa30d5842d97fbed96acd87c5f&amp;oe=5D273D72" width="100%" height="" alt=""></td></tr><tr><td style="font-size:14px;font-weight:bold;padding:8px 8px 0px 8px;text-align:center;">Oud-Scouts Parsival</td></tr><tr><td style="color:#90949c;font-size:12px;font-weight:normal;text-align:center;">Besloten groep · 10 leden</td></tr><tr><td style="padding:8px 12px 12px 12px;"><table border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;width:100%;"><tbody><tr><td style="background-color:#4267b2;border-radius:3px;text-align:center;"><a style="color:#3b5998;text-decoration:none;cursor:pointer;width:100%;" href="https://www.facebook.com/plugins/group/join/popup/?group_id=428188391251729&amp;source=email_campaign_plugin" target="_blank" rel="noopener"><table border="0" cellspacing="0" cellpadding="3" align="center" style="border-collapse:collapse;"><tbody><tr><td style="border-bottom:3px solid #4267b2;border-top:3px solid #4267b2;color:#FFF;font-family:Helvetica, Arial, sans-serif;font-size:12px;font-weight:bold;">Lid worden van deze groep</td></tr></tbody></table></a></td></tr></tbody></table></td></tr><tr><td style="border-top:1px solid #dddfe2;font-size:12px;padding:8px 12px;">Nieuws &amp; Activiteiten voor oud-Parsivalianen en sympathisanten. Oud-Scouts Parsival is de oudscoutswerking van Scouts Parsival. We informeren op regelmatige basis over activiteiten en nieuws  voor en door (oud-)scouts...   aan al wie het weten wil.</td></tr></tbody></table></td></tr></tbody></table>
 		</div>
 
 		<div id="accordion">
