--- a/index.html
+++ b/index.html
@@ -110,10 +110,8 @@
            				<li class="past"><a href="https://plus.google.com/events/c4tg4v9hh8ebstta7uj42movf78">8/1/2017 | Nieuwjaarsreceptie</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ce7e6b17l24u87kajsvtbtjvisk">26-27/11/2016 | Parsival Mosselfeest</a></li>
            				<li class="past"><a href="https://plus.google.com/events/c30ktk6m73iqk5873pqufm6orsg">13/11/2016 | Fietstocht - 9de editie</a></li>
-           				<li class="past"><a
-href="https://plus.google.com/events/c5kli97hn6ahik3l43bpv7btaf8">7-9/10/2016 | Parsival KNALT!</a></li>
-           				<li class="past"><a
-href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | Charettenweekend</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c5kli97hn6ahik3l43bpv7btaf8">7-9/10/2016 | Parsival KNALT!</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | Charettenweekend</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ce4hfvtjji5pmqadosks5nbs1n8">5-11/8/2016 | OS kamp 2016</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cnr4jlifetbqg6kd1ci6s83jr8k?authkey=CNjqy4HsjMSjZQ">13/6/2016 | Live Stream - EK2016 België Italië</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cin2n2lccnohtfajee1i2ih1jms">4/6/2016 | Vosog - Proviciale wandelrally</a></li>
