--- a/index.html
+++ b/index.html
@@ -65,9 +65,18 @@
 					</aside>
 
 					<ul>
-           				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
-						<li class="future"><a href="https://www.facebook.com/events/720823921681695/">13-15/9/2019 | Charettenweekend 2019</a></li>    
+						<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+						<li class="future"><a href="https://www.facebook.com/events/436394237081492/">10/11/2019 | Fietstocht - 12de editie</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/676488826172661/">11-13/10/2019 | Parsival Knalt!</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/720823921681695/">13-15/9/2019 | Charettenweekend 2019</a></li>    
 						<li class="past"><a href="https://www.facebook.com/events/350748252446048/">30/7-8/8/2019 | OS kamp 2019</a></li> 
+					</ul>
+					
+					<p><a href="https://www.facebook.com/groups/428188391251729/events/" class="bigbutton">Bekijk het nieuwe activiteiten overzicht op Facebook</a></p>
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events">Bekijk het oude activiteiten overzicht op Google+</a></p>
+					
+					<h3>Archief</h3>
+					<ul>
 						<li class="past"><a href="https://www.facebook.com/events/1811280442305144/">5-10/6/2019 | Zomeroffensief - 75jaar D-day</a></li> 
 						<li class="past"><a href="https://plus.google.com/events/c1fi4ur3p5g6lt2u74uetfr74b0">16-17/03/2019 | L(uxe) O(ud) S(couts) weekend</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cuj9c570k62j16q7mqh2c83vpvc">25-27/01/2019 | Winteroffensief 2019</a></li>
@@ -75,15 +84,8 @@
 						<li class="past"><a href="https://plus.google.com/events/cn2k34okp99gnd1p9kuasarpdqo">24-25/11/2018 | Parsival Mosselfeest</a></li>
 						<li class="past"><a href="https://plus.google.com/events/c2h9vmnol5tvv24c8pdqbpfsqd8">11/11/2018 | Fietstocht - 11de editie</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cs2764m02jui08lllmud1s44i7k">12-14/10/2018 | Parsival Knalt!</a></li>
-           				<li class="past"><a href="https://plus.google.com/events/c8bd24jqbmbntgsaj19pggfnic8">7-9/9/2018 | Charettenweekend 2018</a></li>
-           				<li class="past"><a href="https://plus.google.com/events/cu16bpj1pgtp3dn3tb0i0mh7mhk">31/7-8/8/2018 | OS kamp 2018</a></li>
-					</ul>
-
-					<p><a href="https://www.facebook.com/groups/428188391251729/events/" class="bigbutton">Bekijk het nieuwe activiteiten overzicht op Facebook</a></p>
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events">Bekijk het oude activiteiten overzicht op Google+</a></p>
-
- 					<h3>Archief</h3>
-					<ul>
+						<li class="past"><a href="https://plus.google.com/events/c8bd24jqbmbntgsaj19pggfnic8">7-9/9/2018 | Charettenweekend 2018</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cu16bpj1pgtp3dn3tb0i0mh7mhk">31/7-8/8/2018 | OS kamp 2018</a></li>
 						<li class="past"><a href="https://plus.google.com/events/clsc04tbl926crl0ppfipqqesfk">22/6/2018 | Parsivaliaans Openlucht Popup Zomerterras</a></li>
            				<li class="past"><a href="https://plus.google.com/events/c9c3coetpoabm75mpt64kuagbo8">8-9/6/2018 | Zomeroffensief 2018 (Lite edition)</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cf00nb9f8u5edk5unt23int5ifk">29/4/2018 | (Graalridders - Parsival - Oud Scouts) Wandeling met Hermelijn</a></li>
