--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 						<li class="past"><a href="https://www.facebook.com/events/350748252446048/">30/7-8/8/2019 | OS kamp 2019</a></li> 
 					</ul>
 					
-					<p><a href="https://www.facebook.com/groups/428188391251729/events/" class="bigbutton">Bekijk het nieuwe activiteiten overzicht op Facebook</a></p>
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events">Bekijk het oude activiteiten overzicht op Google+</a></p>
+					<p><a href="https://www.facebook.com/groups/428188391251729/events/" class="bigbutton">Volg onze activiteiten op Facebook</a></p>
+					<!-- <p><a href="https://plus.google.com/u/0/b/103890813912672931897/events">Bekijk het oude activiteiten overzicht op Google+</a></p> -->
 					
 					<h3>Archief</h3>
 					<ul>
