--- a/index.html
+++ b/index.html
@@ -66,14 +66,10 @@
 
 					<ul>
 						<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
-						<li class="future"><a href="https://www.facebook.com/events/462055227747552/">14-15/03/2020 | L(uxe) O(ud) S(couts) weekend</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/467242104171253/">24-26/01/2020 | Winteroffensief 2020</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/593223458139067/">12/01/2020 | Nieuwjaarsreceptie</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/444066466306820/">23/12/2019 | VT-dropping - kerststal</a></li>
-						<li class="past"><a href="https://www.facebook.com/events/436394237081492/">10/11/2019 | Fietstocht - 12de editie</a></li>
-						<li class="past"><a href="https://www.facebook.com/events/676488826172661/">11-13/10/2019 | Parsival Knalt!</a></li>
-						<li class="past"><a href="https://www.facebook.com/events/720823921681695/">13-15/9/2019 | Charettenweekend 2019</a></li>    
-						<li class="past"><a href="https://www.facebook.com/events/350748252446048/">30/7-8/8/2019 | OS kamp 2019</a></li> 
+						<li class="future"><a href="https://www.facebook.com/events/260657408491463/">14-15/03/2020 | OS kamp 2020 - Moulin du Ruy</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/462055227747552/">14-15/03/2020 | L(uxe) O(ud) S(couts) weekend</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/467242104171253/">24-26/01/2020 | Winteroffensief 2020</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/593223458139067/">12/01/2020 | Nieuwjaarsreceptie</a></li>
 					</ul>
 					
 					<p><a href="https://www.facebook.com/groups/428188391251729/events/" class="bigbutton">Volg onze activiteiten op Facebook</a></p>
@@ -81,6 +77,11 @@
 					
 					<h3>Archief</h3>
 					<ul>
+						<li class="past"><a href="https://www.facebook.com/events/444066466306820/">23/12/2019 | VT-dropping - kerststal</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/436394237081492/">10/11/2019 | Fietstocht - 12de editie</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/676488826172661/">11-13/10/2019 | Parsival Knalt!</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/720823921681695/">13-15/9/2019 | Charettenweekend 2019</a></li>    
+						<li class="past"><a href="https://www.facebook.com/events/350748252446048/">30/7-8/8/2019 | OS kamp 2019</a></li> 
 						<li class="past"><a href="https://www.facebook.com/events/1811280442305144/">5-10/6/2019 | Zomeroffensief - 75jaar D-day</a></li> 
 						<li class="past"><a href="https://plus.google.com/events/c1fi4ur3p5g6lt2u74uetfr74b0">16-17/03/2019 | L(uxe) O(ud) S(couts) weekend</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cuj9c570k62j16q7mqh2c83vpvc">25-27/01/2019 | Winteroffensief 2019</a></li>
