--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
 
 							<select name="LASTYEAR" class="lastyear" id="mce-LASTYEAR">
 								<option value="--">Laatste scoutsjaar (jaarthema, kampplaats, kampthema)</option>
-								<option value="2019-2020">2019-2020 - Scoutsmoedig -  - ...</option>
+								<option value="2020-2021">2020-2021 - 't Zal wel zijn - Botassart - ...</option>
+								<option value="2019-2020">2019-2020 - Scoutsmoedig - Lodomez (Stavelot) - Olympische Spelen</option>
 								<option value="2018-2019">2018-2019 - Minder is meer - Merny (Paliseul) - Op Safari</option>
 								<option value="2017-2018">2017-2018 - Allemaal abnormaal - Vesqueville - De Ruimte</option>
 								<option value="2016-2017">2016-2017 - Grenzeloos Groeien - Felenne - Teletijdmachine</option>
