--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
 
 					<ul>
 						<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
-						<li class="future"><a href="https://www.facebook.com/events/2575897022740078">9-11/10/2020 | Knalt! - Zomerbar & activiteiten</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/2575897022740078">26/9/2020 | Knalt! - Zomerbar</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/2575897022740078">12/9/2020 | Knalt! - Zomerbar</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/395251691458798">12/9/2020 | Charettenwandeling</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/2575897022740078">29/8/2020 | Knalt! - Zomerbar</a></li>
+						<li class="future"><a href="">3-11/8/2021 | OS kamp 2021 - Poupehan</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/2575897022740078">9-11/10/2020 | Knalt! - Zomerbar & activiteiten</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/2575897022740078">26/9/2020 | Knalt! - Zomerbar</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/2575897022740078">12/9/2020 | Knalt! - Zomerbar</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/395251691458798">12/9/2020 | Charettenwandeling</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/2575897022740078">29/8/2020 | Knalt! - Zomerbar</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/260657408491463/">4-12/8/2020 | OS kamp 2020 - Moulin du Ruy</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/462055227747552/">14-15/3/2020 | L(uxe) O(ud) S(couts) weekend</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/467242104171253/">24-26/1/2020 | Winteroffensief 2020</a></li>
