update bedrag lidgeld

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 						<li>kortom, iedereen die van ver of dichtbij gelieerd is of was aan scouts Parsival</li>
 					</ul>
 					<h3>Hoeveel kost dat?</h3>
-					<p>Lid zijn van oudscouts Parsival kost €12,50 per individu, €20 euro voor een samenwonend koppel per jaar.</p>
+					<p>Lid zijn van oudscouts Parsival kost €15 per individu, €25 euro voor een samenwonend koppel per jaar (> verhoogd door VOSOG sinds 2021)</p>
 					<p>Het gros daarvan gaat naar de Vosog-verzekering. Wat overblijft zijn enkele euro's die we kunnen gebruiken voor onze eigen minimale werkingskosten, en af en toe een extraatje voor onze leden.</p>
 					<aside>
 						<p>Aan de mensen met (kleine) kinderen: voor een kleine extra bijdrage van 1 euro per kind (tot 18j!!) kunnen ze mee verzekerd worden. <strong>Te gek om niet te doen dus!</strong></p>
