add kamp fb event url

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 					<ul>
 						<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
-						<li class="future"><a href="">3-11/8/2021 | OS kamp 2021 - Poupehan</a></li>
+						<li class="future"><a href="https://www.facebook.com/events/1164335740753185">3-11/8/2021 | OS kamp 2021 - Poupehan</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/2575897022740078">9-11/10/2020 | Knalt! - Zomerbar & activiteiten</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/2575897022740078">26/9/2020 | Knalt! - Zomerbar</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/2575897022740078">12/9/2020 | Knalt! - Zomerbar</a></li>
