--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 					<ul>
 						<!-- <li class="past|present|future"><a href="https://fb+href">1/1/2014 | Naam Activiteit</a></li> -->
 						<li class="future"><a href="https://www.facebook.com/events/2965827117066240">12-13/3/2022 | L(uxe) O(ud) S(couts) weekend</a></li>
+						<li class="future"><a href="https://www.facebook.com/events/1333613830424223">12/2/2022 | Valentijnshoppen</a></li>
 						<li class="future"><a href="https://www.facebook.com/events/2781179172180134">28-29-30/1/2022 | Winteroffensief 2022</a></li>
 						<li class="future"><a href="https://www.facebook.com/events/1455982328116169">9/1/2022 | Nieuwjaarsreceptie</a></li>
 						<li class="future"><a href="https://www.facebook.com/events/1266343193833199">14/11/2021 | Toanhoazentocht (fietstocht)</a></li>
