--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 						<li class="future"><a href="https://www.facebook.com/events/2965827117066240">12-13/3/2022 | L(uxe) O(ud) S(couts) weekend</a></li>
 						<li class="future"><a href="https://www.facebook.com/events/1333613830424223">12/2/2022 | Valentijnshoppen</a></li>
 						<li class="future"><a href="https://www.facebook.com/events/2781179172180134">28-29-30/1/2022 | Winteroffensief 2022</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/1455982328116169">9/1/2022 | Nieuwjaarsreceptie</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/1266343193833199">14/11/2021 | Toanhoazentocht (fietstocht)</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/1279220359182327">19/10/2021 | Algemene ledenvergadering</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/439364987349691">8-9-10/10/2021 | Parsival Knalt! - Zomerbar & activiteiten</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/1455982328116169">9/1/2022 | Nieuwjaarsreceptie</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/1266343193833199">14/11/2021 | Toanhoazentocht (fietstocht)</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/1279220359182327">19/10/2021 | Algemene ledenvergadering</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/439364987349691">8-9-10/10/2021 | Parsival Knalt! - Zomerbar & activiteiten</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/439364997349690">25/9/2021 | Knalt! - Zomerbar</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/439365000683023">28/8/2021 | Knalt! - Zomerbar</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/1164335740753185">3-11/8/2021 | OS kamp 2021 - Poupehan</a></li>
