--- a/index.html
+++ b/index.html
@@ -64,11 +64,14 @@
 						<p>Alle activiteiten hebben een vrijblijvend karakter (er is dus geen enkele verplichting). Voor de activiteiten die we zelf organiseren (weekends, kamp, e.d.) vragen we wel een <a href="#lidmaatschap" onclick="_gaq.push(['_trackPageview' ,'#lidmaatschap']);">volwaardig lidmaatschap</a>.  Maar je zal eveneens dingen terugvinden die voor iedereen bedoeld zijn (vb. de jaarlijkse Parsival-opendeurdag)</p>
 					</aside>
 
-					<ul>
+ 					<ul>
 						<!-- <li class="past|present|future"><a href="https://fb+href">1/1/2014 | Naam Activiteit</a></li> -->
-						<li class="future"><a href="https://www.facebook.com/events/2965827117066240">12-13/3/2022 | L(uxe) O(ud) S(couts) weekend</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/1333613830424223">12/2/2022 | Valentijnshoppen</a></li>
-						<li class="future"><a href="https://www.facebook.com/events/2781179172180134">28-29-30/1/2022 | Winteroffensief 2022</a></li>
+						<li class="future"><a href="#">7-9/10/2022 | Parsival Knalt!</a></li>
+						<li class="future"><a href="#">10-11/9/2022 | Charettenweekend 2022</a></li>
+						<li class="future"><a href="https://www.facebook.com/events/751300782570359">2-10/8/2022 | OS kamp 2022 - Solwaster</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/2965827117066240">12-13/3/2022 | L(uxe) O(ud) S(couts) weekend</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/1333613830424223">12/2/2022 | Valentijnshoppen</a></li>
+						<li class="past"><a href="https://www.facebook.com/events/2781179172180134">28-29-30/1/2022 | Winteroffensief 2022</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/1455982328116169">9/1/2022 | Nieuwjaarsreceptie</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/1266343193833199">14/11/2021 | Toanhoazentocht (fietstocht)</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/1279220359182327">19/10/2021 | Algemene ledenvergadering</a></li>
