--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
  					<ul>
 						<!-- <li class="past|present|future"><a href="https://fb+href">1/1/2014 | Naam Activiteit</a></li> -->
 						<li class="future"><a href="#">7-9/10/2022 | Parsival Knalt!</a></li>
-						<li class="future"><a href="#">10-11/9/2022 | Charettenweekend 2022</a></li>
+						<li class="future"><a href="https://www.facebook.com/events/575065034073062">10-11/9/2022 | Charetten- en rollatorweekend 2022</a></li>
 						<li class="future"><a href="https://www.facebook.com/events/751300782570359">2-10/8/2022 | OS kamp 2022 - Solwaster</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/2965827117066240">12-13/3/2022 | L(uxe) O(ud) S(couts) weekend</a></li>
 						<li class="past"><a href="https://www.facebook.com/events/1333613830424223">12/2/2022 | Valentijnshoppen</a></li>
