update member fee

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 					<li>kortom, iedereen die van ver of dichtbij gelieerd is of was aan scouts Parsival</li>
 				</ul>
 				<h3>Hoeveel kost dat?</h3>
-				<p>Lid zijn van oudscouts Parsival kost €15 per individu, €25 euro voor een samenwonend koppel per jaar
+				<p>Lid zijn van oudscouts Parsival kost €15 per individu, €30 voor een samenwonend koppel per jaar
 					(> verhoogd door VOSOG sinds 2021)</p>
 				<p>Het gros daarvan gaat naar de Vosog-verzekering. Wat overblijft zijn enkele euro's die we kunnen
 					gebruiken voor onze eigen minimale werkingskosten, en af en toe een extraatje voor onze leden.</p>
