update field 'laatste scoutsjaar'

--- a/index.html
+++ b/index.html
@@ -446,6 +446,10 @@
 
 						<select name="LASTYEAR" class="lastyear" id="mce-LASTYEAR">
 							<option value="--">Laatste scoutsjaar (jaarthema, kampplaats, kampthema)</option>
+							<option value="2024-2025">2024-2025 - ... - ... - ...</option>
+							<option value="2023-2024">2023-2024 - ... - ... - ...</option>
+							<option value="2022-2023">2022-2023 - DAS Goesting - Krinkelt - ...</option>
+							<option value="2021-2022">2021-2022 - Dromenland in zicht - Solwaster - Piraten</option>
 							<option value="2020-2021">2020-2021 - 't Zal wel zijn - Graide - Leger</option>
 							<option value="2019-2020">2019-2020 - Scoutsmoedig - Lodomez (Stavelot) - Olympische Spelen
 							</option>
