--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
 				<ul>
 					<!-- <li class="past|present|future"><a href="https://fb+href">1/1/2014 | Naam Activiteit</a></li> -->
 					<li class="future">26-28/1/2024 | Winteroffensief 2024</li>
-					<li class="future">19/1/2024 | Comedy Night</li>
-					<!-- <li class="future">31/12/2023 | Oud op nieuw</li> -->
+					<li class="future"><a href="https://oudscouts.parsival.be/comedy-night">19/1/2024 | Comedy Night</a></li>
+					<!-- <li class="future"><a href="https://oudscouts.parsival.be/oud-op-nieuw">31/12/2023 | Oud op nieuw</a></li> -->
 					<!-- <li class="past"><a href="https://parsival.be/event/mosselsoupe/">25-26/11/2023 | Parsival Mosselfeest</a></li> -->
 					<li class="future"><a href="https://www.facebook.com/events/241928848845256/241928858845255">19/11/2023 | OS café (November 2023)</a></li>
-					<li class="future">11 of 12/11/2023 | Toanhoazentocht (fietstocht)</li>
+					<li class="future"><a href="https://www.facebook.com/events/1048237862851699">11/11/2023 | Toanhoazentocht (fietstocht)</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/241928848845256/241928865511921">22/10/2023 | OS café (Oktober 2023)</a></li>
 					<li class="future"><a href="https://fb+href">7-9/10/2022 | Parsival Knalt!</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/241928848845256/241928862178588">24/9/2023 | OS café (September 2023)</a></li>
+					<li class="past"><a href="https://www.facebook.com/events/241928848845256/241928862178588">24/9/2023 | OS café (September 2023)</a></li>
 					<li class="past"><a href="https://www.facebook.com/events/567855238861358">8-10/9/2023 | Charetten- en rollatorweekend 2023</a></li>
 				</ul>
 				
