--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 				<ul>
 					<!-- <li class="past|present|future"><a href="https://fb+href">1/1/2014 | Naam Activiteit</a></li> -->
-					<li class="future">26-28/1/2024 | Winteroffensief 2024</li>
+					<li class="future"><a href="https://www.facebook.com/events/1379243822678344">26-28/1/2024 | Winteroffensief 2024</a></li>
 					<li class="future"><a href="https://oudscouts.parsival.be/comedy-night">19/1/2024 | Comedy Night</a></li>
 					<!-- <li class="future"><a href="https://oudscouts.parsival.be/oud-op-nieuw">31/12/2023 | Oud op nieuw</a></li> -->
 					<!-- <li class="past"><a href="https://parsival.be/event/mosselsoupe/">25-26/11/2023 | Parsival Mosselfeest</a></li> -->
