remove emtpy css rulesets

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 		<table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
 			<tbody>
 				<tr>
-					<td style="">
+					<td>
 						<table border="0" cellspacing="0" cellpadding="0"
 							style="border-collapse:separate;background-color:#ffffff;border:1px solid #dddfe2;border-radius:3px;font-family:Helvetica, Arial, sans-serif;margin:0px auto; max-width:640px;">
 							<tbody>
 								<tr style="padding-bottom: 8px;">
-									<td style=""><img class="img"
+									<td><img class="img"
 											src="https://scontent-frx5-1.xx.fbcdn.net/v/t1.0-0/c0.0.568.296a/p320x320/51945489_2160385257389077_4848220171044651008_n.jpg?_nc_cat=103&amp;_nc_ht=scontent-frx5-1.xx&amp;oh=3feff3aa30d5842d97fbed96acd87c5f&amp;oe=5D273D72"
 											width="100%" height="" alt=""></td>
 								</tr>
