--- a/index.html
+++ b/index.html
@@ -138,20 +138,24 @@
 
 				<ul>
 					<!-- <li class="past|present|future"><a href="https://fb+href">1/1/2014 | Naam Activiteit</a></li> -->
+					<li class="future"><a href="https://www.facebook.com/events/1208355023812724">30/7-7/8/2023 | OS kamp 2023 (Andler)a></li>
 					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983666576737">23/6/2024 | OS café (Juni 2024)</a></li>
+					<li class="future"><a href="https://www.facebook.com/events/1610534039715358">4-8/6/2024 | Zomeroffensief - 80 jaar D-Day</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983663243404">19/5/2024 | OS café (Mei 2024)</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983649910072">21/4/2024 | OS café (April 2024)</a></li>
+					<li class="future"><a href="https://www.facebook.com/events/148053545069712">21/4/2024 | Algemene ledenvergaderingadering</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983659910071">24/3/2024 | OS café (Maart 2024)</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983656576738">18/2/2024 | OS café (Februari 2024)</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/1379243822678344">26-28/1/2024 | Winteroffensief 2024</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983653243405">21/1/2024 | OS café (Januari 2024)</a></li>
-					<li class="future"><a href="https://oudscouts.parsival.be/comedy-night">19/1/2024 | Comedy Night</a></li>
-					<!-- <li class="future"><a href="https://oudscouts.parsival.be/oud-op-nieuw">31/12/2023 | Oud op nieuw</a></li> -->
-					<!-- <li class="past"><a href="https://parsival.be/event/mosselsoupe/">25-26/11/2023 | Parsival Mosselfeest</a></li> -->
-					<li class="future"><a href="https://www.facebook.com/events/241928848845256/241928858845255">19/11/2023 | OS café (November 2023)</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/1048237862851699">11/11/2023 | Toanhoazentocht (fietstocht)</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/241928848845256/241928865511921">22/10/2023 | OS café (Oktober 2023)</a></li>
-					<li class="future"><a href="https://fb+href">7-9/10/2022 | Parsival Knalt!</a></li>
+					<li class="future"><a href="https://www.facebook.com/events/216269208243498">23/2/2024 | Jeneverwandeling</a></li>
+					<!-- <li class="past"><a href="https://www.facebook.com/events/753982399910197/753983656576738">18/2/2024 | OS café (Februari 2024)</a></li> -->
+					<li class="past"><a href="https://www.facebook.com/events/1379243822678344">26-28/1/2024 | Winteroffensief 2024</a></li>
+					<li class="past"><a href="https://www.facebook.com/events/753982399910197/753983653243405">21/1/2024 | OS café (Januari 2024)</a></li>
+					<li class="past"><a href="https://oudscouts.parsival.be/comedy-night">19/1/2024 | Comedy Night</a></li>
+					<li class="past"><a href="https://oudscouts.parsival.be/oud-op-nieuw">31/12/2023 | Oud op nieuw</a></li>
+					<li class="past"><a href="https://parsival.be/event/mosselsoupe/">25-26/11/2023 | Parsival Mosselfeest</a></li>
+					<li class="past"><a href="https://www.facebook.com/events/241928848845256/241928858845255">19/11/2023 | OS café (November 2023)</a></li>
+					<li class="past"><a href="https://www.facebook.com/events/1048237862851699">11/11/2023 | Toanhoazentocht (fietstocht)</a></li>
+					<li class="past"><a href="https://www.facebook.com/events/241928848845256/241928865511921">22/10/2023 | OS café (Oktober 2023)</a></li>
+					<li class="past"><a href="https://fb+href">7-9/10/2022 | Parsival Knalt!</a></li>
 					<li class="past"><a href="https://www.facebook.com/events/241928848845256/241928862178588">24/9/2023 | OS café (September 2023)</a></li>
 					<li class="past"><a href="https://www.facebook.com/events/567855238861358">8-10/9/2023 | Charetten- en rollatorweekend 2023</a></li>
 				</ul>
