--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 				<ul>
 					<!-- <li class="past|present|future"><a href="https://fb+href">1/1/2014 | Naam Activiteit</a></li> -->
-					<li class="future"><a href="https://www.facebook.com/events/1208355023812724">30/7-7/8/2023 | OS kamp 2023 (Andler)a></li>
+					<li class="future"><a href="https://www.facebook.com/events/1208355023812724">30/7-7/8/2023 | OS kamp 2024 (Ottré)</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983666576737">23/6/2024 | OS café (Juni 2024)</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/1610534039715358">4-8/6/2024 | Zomeroffensief - 80 jaar D-Day</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983663243404">19/5/2024 | OS café (Mei 2024)</a></li>
