--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					<li class="future"><a href="https://www.facebook.com/events/1610534039715358">4-8/6/2024 | Zomeroffensief - 80 jaar D-Day</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983663243404">19/5/2024 | OS café (Mei 2024)</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983649910072">21/4/2024 | OS café (April 2024)</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/148053545069712">21/4/2024 | Algemene ledenvergaderingadering</a></li>
+					<li class="future"><a href="https://www.facebook.com/events/148053545069712">21/4/2024 | Ledenvergadering</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/753982399910197/753983659910071">24/3/2024 | OS café (Maart 2024)</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/216269208243498">23/2/2024 | Jeneverwandeling</a></li>
 					<!-- <li class="past"><a href="https://www.facebook.com/events/753982399910197/753983656576738">18/2/2024 | OS café (Februari 2024)</a></li> -->
