--- a/index.html
+++ b/index.html
@@ -608,12 +608,12 @@
 					<li>kortom, iedereen die van ver of dichtbij gelieerd is of was aan scouts Parsival</li>
 				</ul>
 				<h3>Hoeveel kost dat?</h3>
-				<p>Lid zijn van oudscouts Parsival kost €15 per individu, €30 voor een samenwonend koppel per jaar</p>
+				<p>Lid zijn van oudscouts Parsival kost €20 per individu, €40 voor een samenwonend koppel per jaar</p>
 				<p>Het gros daarvan gaat naar de Vosog-verzekering (> verhoogd door VOSOG op 1/9/2022). Wat overblijft zijn enkele euro's die we kunnen
 					gebruiken voor onze eigen minimale werkingskosten, en af en toe een extraatje voor onze leden.</p>
 				<aside>
-					<p>Aan de mensen met (kleine) kinderen: voor een kleine extra bijdrage van 3 euro per kind (tot
-						18j!!) kunnen ze mee verzekerd worden. <strong>Te gek om niet te doen dus!</strong></p>
+					<p>Aan de mensen met (kleine) kinderen: voor een extra bijdrage van 5 euro per kind (tot
+						18j!!) kunnen ze mee verzekerd worden. <strong>Een aanrader!</strong></p>
 				</aside>
 				<aside>
 					<p>Het lidmaatschap dient bij aanvang van elk werkjaar hernieuwd te worden.</p>
